# ImpPlayer

./: .gitignore  CMakeLists.txt  ImpPlayer.project  README.md  doxy.cfg  main.cpp
include/: Animation.hpp  Core.hpp  EntityLoader.hpp  Game.hpp  Object.hpp  Orientation.hpp
include/Render/: InputController.hpp  InputLogic.hpp  RendererEngine.hpp  SpriteSheet.hpp  WRenderer.hpp  WRendererSFML.hpp
include/Utils/: Clock.hpp  Log.hpp  Rect.hpp  Util.hpp  Vector.hpp
pyModules/: entityLoader.py
resource/: BHIGHLANDER.SC.XML
resource/BHIGHLANDER/: ATTACK.RLE.MMP  DIE_SHADOW.RLE.MMP  TAUNT_SHADOW.RLE.MMP  TOATTACK.RLE.MMP  TOATTACK_SHADOW.RLE.MMP  WALK.RLE.MMP  WALK_SHADOW.RLE.MMP
resource/units/BHIGHLANDER/: ATTACK_SHADOW.RLE.MMP  BHIGHLANDER.ENT.XML  BHIGHLANDER.PASS  DIE.RLE.MMP  IDLE.RLE.MMP  IDLE_SHADOW.RLE.MMP  TAUNT.RLE.MMP
src/: Animation.cpp  Core.cpp  EntityLoader.cpp  Game.cpp  Object.cpp  main.cpp
src/Render/: InputController.cpp  InputLogic.cpp  RendererEngine.cpp  SpriteSheet.cpp  WRendererSFML.cpp
src/Utils/: Clock.cpp  Log.cpp  Util.cpp
